UI/css/style.css
/* ... */
@media (max-width: 600px) {

    /*
    ============================
        Index Responsiveness
    ============================
    */

    .showcase-header {
        padding: 0 .5rem;
    }

    .showcase-logo {
        font-size: 1.4rem;
    }

    .showcase-item:not(:last-child) {
        margin-right: 0;
    }

    .showcase-body {
        padding: 1rem;
        flex-direction: column;
    }

    .showcase-title {
        font-size: 1rem;
    }

    .showcase-body-left {
        margin: 2rem 0;
        text-align: center;
    }

    .showcase-title {
        font-size: 2rem;
    }

    /*
    =======================
        Welcome User
    =======================
    */
    .welcome-user-photo {
        height: 3rem;
        width: 3rem;
        margin: 0 .2rem;
    }

    .welcome-username {
        font-size: var(--ten-pexels);;
    }

    .last-login {
        font-size: .6rem;
    }

    .total-balance {
        font-size: var(--ten-pexels);
    }

    .total-balance-amount {
        font-size: var(--ten-pexels);;
        font-weight: 600;
    }

    /*
    ===============================
        Dashboard Responsiveness
    ===============================
    */
    .dashboard-wrapper {
        flex-direction: column;
    }

    .user-details {
        margin-right: 0;
        margin-bottom: var(--ten-pexels);
    }

    /*
    ============================
        Table Responsiveness
    ============================
    */
    .table-row {
        flex-direction: column;
        height: 11rem;
        padding: .5rem 0;
    }

    .header .user-nav-notification-pop {
        width: 15rem;
        right: -100%;
    }

    .header .user-nav-user-pop {
        width: 10rem;
    }

    .user-nav-username {
        display: none;
    }
    
    .modal-content {
        width: 90%;
    }
}

